fix(crafting)：处理历史基团被整体重写、幼体成长时间、快捷栏超长物品名等问题。